# rust_rocket

./: Cargo.toml
src/: api.rs  main.rs  tera.rs
templates/: base.html.tera  index.html.tera
