[package]
name = "rust_rocket"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
exitfailure = "0.5.1"
futures = "0.3.28"
handlebars = "4.3.7"
reqwest = { version = "0.11.18", features = ["json"] }
rocket = "=0.5.0-rc.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0.163"
serde_json = "1.0.96"
tera = "1.19.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars", "tera"]
